=== WebCore-417.11 ===

2005-12-08  Adele Peterson  <adele@apple.com>

        Reviewed by Tim Hatcher.

        - fixed <rdar://problem/4363794> 10.4.4 REGRESSION: Page scroll position jumps when clicking on word in editable div (5911)
        setFocusNode was trying to scroll to reveal elements unnecessarily. 
        Now the callers have to decide whether or not to scroll.

        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::setFocusNode): No longer calls scrolling code.
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::nextKeyViewInFrame): Now calls scrolling code after setting the focus node.
        * khtml/xml/dom_elementimpl.cpp:
        (ElementImpl::focus): Moved functionality from Element::focus.
         Now these functions also call scrolling code.
        (ElementImpl::blur): ditto.
        * khtml/xml/dom_elementimpl.h: Added focus and blur.
        * khtml/dom/dom_element.cpp:
        (Element::focus): Now calls ElementImpl::focus
        (Element::blur): ditto.

2005-12-08  Tim Omernick  <timo@apple.com>

        Merged fix from TOT to Safari-2-0-branch

        Reviewed and landed by Maciej.

        - some simple changes that amount to a < 1% speedup.

        * khtml/css/cssstyleselector.cpp:
        (khtml::CSSStyleSelector::applyProperty):
        * khtml/rendering/bidi.cpp:
        (khtml::BidiIterator::direction):
        * kwq/KWQKURL.mm:
        (hasSlashDotOrDotDot):
        * kwq/KWQString.mm:
        (QString::~QString):

2005-12-08  David Harrison  <harrison@apple.com>

        Reviewed by Geoff.

        <rdar://problem/4366496> 10.4.4 Regression: "Corel Painter IX (v9.1)" crashed
        when going from the "Open a template" menu to "Select recent Document" in the
        "Welcome to Corel XI!" window.

        * kwq/KWQComboBox.mm:
        (-[KWQPopUpButtonCell trackMouse:inRect:ofView:untilMouseUp:]):